--- a/frontend2/my-app/styles/Home.module.css
+++ b/frontend2/my-app/styles/Home.module.css
@@ -79,13 +79,16 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
+  display: center;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
 }
 
-.card:hover,
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 .card:focus,
 .card:active {
   color: #0070f3;
